fixed spacing and formatting of header

--- a/style.css
+++ b/style.css
@@ -20,17 +20,20 @@ h2 {
 
 body { /*perhaps move styling from body to top class right after body*/
     background: slategray;
-    margin: 0 auto; 
+    margin: 0px 10px; 
     padding: 1%;  /* Maybe change to something else to space content in*/
-    padding-top: 40px;
-    width: 80%;
+    padding-top: 70px;
+    width: 100%;
 }
 header {
-    background: lightslategray;
+    background: #DAE3E7;
     position: relative;
+    padding: 10px 0px;
+    height: 500px;
+    width: 100%;
 }
 nav {
-    background-color: #7a7a7a;
+    background-color: lightslategray;
     position: fixed;
     top: 0px;
     text-align: center;
@@ -48,10 +51,25 @@ nav {
 .links {
     display: inline-block;
     width: auto auto;
-    margin: 10px;
+    margin: 1px;
+    background: gray;
+    padding: 10px;
 }
 
+.profile-image-container {
+    float: left;
+    object-fit: cover;
+    height: 448px;
+    width: 336px;
+}
 
-.container {
-    padding: 40px 0px;
+.profile-image {
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+}
+
+#about {
+    clear: both;
 }
